--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>marsbq</title>
-    <link rel="stylesheet" href="src/styles/main.css">
+    <link rel="stylesheet" href="dist/styles/main.css">
   </head>
   <body>
   <!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
