--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -1,9 +1,9 @@
-<header>
+<header class="header-container">
+	<div class="wrap">
+		<img src="dist/img/marsbq_logo.png" alt="MarsBQ">
+		<p>Join us for the first intergalactic BBQ</p>
+		<h2>Saturday November 5, 2056</h2>
 
-	<img src="dist/img/marsbq_logo.png" alt="MarsBQ">
-	<p>Join us for the first intergalactic BBQ</p>
-	<h2>Saturday November 5, 2056</h2>
-
-	<a href="#">Register to Attend</a>
-
+		<a href="#">Register to Attend</a>
+	</div>
 </header>
