--- a/src/styles/modules/base.less
+++ b/src/styles/modules/base.less
@@ -1,8 +1,16 @@
+/* Base styles */
+
 /* set the default color, font-size, and line height */
 html {
-  color: #333;
+  color: @brown;
   font-size: 1em;
   line-height: 1.4;
+  box-sizing: border-box;
+}
+
+/* normalize the box model */
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 /* make images and embedded media fluid */
@@ -11,7 +19,55 @@ object {
   max-width: 100%;
 }
 
+/* base layout */
+
 .wrap {
   max-width: 1100px;
   margin: 0 auto;
+  padding: 2em 1em;
+  text-align: center;
+}
+
+.section-list,
+.section-heading {
+  .reset;
+}
+
+/* list styles and layout */
+
+.section-list {
+
+  li {
+    list-style: none;
+  }
+
+}
+
+/* Link styles */
+
+a,
+a:visited,
+.link {
+
+  background: @red;
+  color: @light-bg;
+  text-decoration: none;
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    background: lighten(@red, 2%);
+    color: darken(@light-bg, 10%);
+  }
+
+}
+
+.btn {
+  display: block;
+  max-width: 300px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 1.6em;
+  padding: 1em;
+  .rounded-corner(4px);
 }
