--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -4,6 +4,6 @@
 		<p>Join us for the first intergalactic BBQ</p>
 		<h2>Saturday November 5, 2056</h2>
 
-		<a href="#">Register to Attend</a>
+		<a class="btn" href="#">Register to Attend</a>
 	</div>
 </header>
