--- a/src/templates/partials/menu.hbs
+++ b/src/templates/partials/menu.hbs
@@ -1,12 +1,11 @@
 <section id="menu" class="menu-container">
 	<div class="wrap">
-		<h2>Menu</h2>
+		<h2 class="section-heading">Menu</h2>
 		<p>Please vote for your favorite items</p>
-		<ul>
+		<ul class="section-list menu-list">
 		{{#each menu}}
-			<li data-id="{{id}}">
-				<span class="menu-title">{{title}}</span>
-				<span class="menu-count">{{count}}</span>
+			<li class="link" data-id="{{id}}">
+				<span class="menu-title">{{title}}</span><span class="menu-count">{{count}}</span>
 			</li>
 		{{/each}}
 		</ul>
